# aqshara-video-worker

./: .env.example  .gitignore  Dockerfile.render  Makefile  README.md  pyproject.toml
.github/workflows/: build-render-image.yml
src/aqshara_video_worker/: __init__.py  config.py  run_job.py  schemas.py
src/aqshara_video_worker/clients/: __init__.py  ai_clients.py  callback_client.py  creative_generation_client.py  event_publisher.py  merge_client.py  render_client.py  storage_client.py  stream_event_publisher.py  tts_client.py
src/aqshara_video_worker/pipeline/: __init__.py  codegen.py  runner.py  storyboard.py
src/aqshara_video_worker/transport/: __init__.py  redis_streams.py
tests/: test_callback_client.py  test_codegen.py  test_creative_generation_client.py  test_merge_client.py  test_render_client.py  test_runner.py  test_schemas.py  test_storyboard.py  test_stream_event_publisher.py  test_tts_client.py
