[project]
name = "aqshara-video-worker"
version = "0.1.0"
description = "Python worker bridge for Aqshara video generation jobs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.39.0",
  "daytona>=0.31.0",
  "httpx>=0.28.0",
  "openai>=2.26.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "redis>=6.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
]

[project.scripts]
aqshara-video-worker = "aqshara_video_worker.run_job:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqshara_video_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
